<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/string_nav_home"></item>
    <item
        android:id="@+id/nav_recent"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/string_nav_recent"></item>
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_storage_black_24dp"
        android:title="@string/string_nav_categories"></item>
    <item
        android:id="@+id/nav_offline"
        android:icon="@drawable/ic_offline_pin_black_24dp"
        android:title="@string/string_nav_offline"></item>

    <!--<item android:id="@+id/nav_settings"-->
    <!--android:icon="@drawable/ic_settings_black_24dp"-->
    <!--android:title="@string/string_nav_settings"></item>-->
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/string_nav_about"></item>
</menu>